--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --text-color-lightblue: #2196f3;
   --text-color-black: #000000;
   --text-color-grey-through: rgba(255, 255, 255, 0.6);
+  --text-ikons-grey: #afb1b8;
 }
 
 body {
@@ -50,7 +51,15 @@ nav .links.current {
   margin: 0 auto;
   padding: 0 15px;
 }
-
+.phonesvg {
+  fill: var(--text-ikons-grey);
+  margin-right: 10px;
+  align-items: center;
+}
+.phonesvg:hover,
+.phonesvg:focus {
+  fill: var(--blue-light-color);
+}
 .head {
   justify-content: space-between;
   display: flex;
@@ -264,6 +273,7 @@ nav .links.current {
   font-size: 16px;
   line-height: 19px;
   text-align: center;
+  margin-bottom: 16px;
 }
 .name-ocupation {
   padding-left: 50px;
@@ -274,7 +284,7 @@ nav .links.current {
 
 .collegues-list {
   width: 270px;
-  height: 368px;
+  height: 428px;
   margin-right: 30px;
 }
 .collegues-list:last-child {
@@ -287,7 +297,32 @@ nav .links.current {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+.social-list {
+  display: flex;
+  justify-content: center;
+}
+.ikonssvg {
+  color: var(--line-color);
+}
+.ikonssvg:hover,
+.ikonssvg:focus {
+  color: var(--main-background-color);
+}
 
+.link-flow {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  fill: var(--text-ikons-grey);
+}
+.link-flow:hover,
+.link-flow:focus {
+  fill: var(--line-color);
+  background-color: var(--blue-light-color);
+}
 /*  portfolio buttons  */
 .buttons {
   color: var(--text-color-dark);
