--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ nav .links.current {
   padding: 60px 15px;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
 }
 
 .logo-footer {
@@ -177,6 +178,41 @@ nav .links.current {
 
 .footer-contakt {
   margin-bottom: 9px;
+}
+/* footer socials*/
+.content-space {
+  margin-right: 70px;
+}
+.footer-title {
+  height: 16px;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-background-color);
+  margin-bottom: 20px;
+}
+.footer-link-flow {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  fill: var(--main-background-color);
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-right: 10px;
+}
+
+.footer-link-flow:hover,
+.footer-link-flow:focus {
+  background-color: var(--blue-light-color);
+}
+.footer-position {
+  display: block;
+}
+.position-services {
+  display: flex;
 }
 
 /* main section */
@@ -409,6 +445,14 @@ nav .links.current {
   border-bottom: 1px solid var(--line-color);
   text-align: left;
 }
+.flex-links-element:hover,
+.flex-links-element:focus {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .flex-links-element:nth-child(3n) {
   margin-right: 0;
 }
@@ -436,6 +480,9 @@ nav .links.current {
   border: 1px solid #afb1b8;
 
   border-radius: 4px;
+}
+.link-size:focus {
+  color: #2196f3;
 }
 
 .clients-color {
