--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,23 @@ nav .links.current {
 .main-section {
   background-color: var(--dark-background-color);
 }
+.owerlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-position: center;
+  padding-top: 200px;
+  background-color: rgba(47, 48, 58, 0.4);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /* фонт задан по макету но не срабатывает  */
 
 .container-flex {
