--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,8 @@ nav .links.current {
   font-weight: 500;
   line-height: 16px;
   letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
 }
 .phone-color:hover,
 .phone-color:focus {
@@ -139,7 +141,7 @@ nav .links.current {
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 
 .logo-footer {
@@ -210,6 +212,7 @@ nav .links.current {
 .footer-link-flow:focus {
   background-color: var(--blue-light-color);
 }
+
 .footer-position {
   display: block;
 }
@@ -360,7 +363,6 @@ nav .links.current {
 }
 .shadow {
   background: #ffffff;
-  /* material shadow v1 */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -485,12 +487,17 @@ nav .links.current {
   justify-content: space-between;
   fill: var(--text-ikons-grey);
 }
+.client-links {
+  width: 170px;
+  height: 90px;
+}
+
 .link-size {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
-  height: 90px;
+  width: 100%;
+  height: 100%;
   border: 1px solid var(--text-ikons-grey);
   border-radius: 4px;
   color: var(--text-ikons-grey);
