--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ nav .links.current {
   margin-right: 30px;
 }
 .service-list:last-child {
-  margin-right: 0%;
+  margin-right: 0;
 }
 .services {
   padding-top: 94px;
