kostil mejdu sekciyami

--- a/css/styles.css
+++ b/css/styles.css
@@ -315,6 +315,10 @@ img {
   border-radius: 4px;
   margin-bottom: 30px;
 }
+.owerflov {
+  padding-top: 94px;
+  padding-bottom: 150px;
+}
 
 /* what do we do */
 .whatwedo {
