--- a/css/styles.css
+++ b/css/styles.css
@@ -315,10 +315,12 @@ img {
   border-radius: 4px;
   margin-bottom: 30px;
 }
+/* krycka */
 .owerflov {
   padding-top: 94px;
   padding-bottom: 150px;
 }
+/* krycka */
 
 /* what do we do */
 .whatwedo {
