--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,7 @@ img {
 }
 
 .links {
+  position: relative;
   color: var(--text-color-dark);
   text-decoration: none;
   font-weight: 500;
@@ -131,6 +132,23 @@ img {
   letter-spacing: 0.02em;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+.links::after {
+  content: "";
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--text-color-lightblue);
+  opacity: 0;
+}
+
+.links:hover::after {
+  opacity: 1;
 }
 
 .links:hover,
