--- a/css/styles.css
+++ b/css/styles.css
@@ -566,3 +566,22 @@ img {
 .clients-color {
   fill: currentColor;
 }
+
+/* modals */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.02);
+}
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--main-background-color);
+}
